sample-1/Gateway_VirtualServices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yelb-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yelb-ui
spec:
  hosts:
    - "*"
  gateways:
    - yelb-gateway
  http:
    - route:
        - destination:
            host: yelb-ui
            port:
              number: 80
      match:
        - uri:
            prefix: /

# ---
# apiVersion: networking.istio.io/v1beta1
# kind: Sidecar
# metadata:
#   name: default
# spec:
#   outboundTrafficPolicy:
#     mode: ALLOW_ANY

# ---
# apiVersion: install.istio.io/v1alpha1
# kind: IstioOperator
# metadata:
#   name: default
# spec:
#   meshConfig:
#     defaultConfig:
#       tracing:
#         sampling: 50
